testsuite/tests/grammar/invalid_error_node/test_nonnull_field/test.lkt
from common import FooNode, Example

class ErrorDecl : FooNode implements ErrorNode {
    @parse_field f: Example
}
